<resources>
    <string name="app_name">Count Library</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <!--Strings related to Main Activity -->
    <!--<string name="title">COUNTS</string>-->

    <!--Strings related to Counter Activity-->
    <string name="counter_title">Count Editor</string>
    <string name="reset">Reset</string>
    <string name="enter_name">Enter name</string>
    <string name="starting_value">0</string>
    <string name="save">Save</string>
    <string name="revert">Revert</string>
    <string name="help_button_text">\?</string>
    <string name="help_title">Help</string>
    <string name="help_message">Tap on the right side of the number to increment it by one, or tap on the left side to decrement it. Your changes are automatically saved when you leave.</string>
    <string name="ok">OK</string>

    <!-- miscellaneous -->

    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="help_menu_name">Help</string>
    <string name="count_deleted">Successfully deleted.</string>
    <string name="undo_count_deleted">Undo</string>
    <string name="select_action">Select</string>
    <string name="increment_image_description">Increment the count</string>
    <string name="decrement_image_description">Decrement the count</string>
    <string name="count_by">Count by:</string>
    <string name="_1">1</string>
    <string name="other">Other:</string>
</resources>
