<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/count_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.lerenard.counter3.CounterActivity">

    <include
        android:id="@+id/counter_title_merge"
        layout="@layout/count_name_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"/>

    <Button
        android:id="@+id/reset_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/counter_title"
        android:layout_alignStart="@+id/counter_title"
        android:layout_below="@+id/counter_title"
        android:text="@string/reset"/>

    <Button
        android:id="@+id/revertButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/counter_title"
        android:layout_alignRight="@+id/counter_title"
        android:layout_below="@+id/counter_title"
        android:text="@string/revert"/>

    <LinearLayout
        android:id="@+id/count_by_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/revertButton"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/count_by"
            android:textSize="@dimen/count_by_text_size"/>

        <RadioGroup
            android:id="@+id/count_by_radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/count_by_margin"
            android:layout_marginStart="@dimen/count_by_margin"
            android:orientation="horizontal"/>

        <EditText
            android:id="@+id/count_by_amount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:textSize="@dimen/count_by_text_size"/>
    </LinearLayout>

    <TextView
        android:id="@+id/count_display"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_alignParentBottom="true"
        android:layout_below="@id/count_by_row"
        android:background="@color/transparent"
        android:gravity="center"
        android:text="@string/starting_value"
        android:textSize="@dimen/count_size"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_alignBottom="@id/count_display"
        android:layout_alignTop="@id/count_display"
        android:orientation="horizontal"
        android:weightSum="2">

        <ImageView
            android:id="@+id/decrement_image"
            style="@style/incrementDecrement"
            android:contentDescription="@string/decrement_image_description"
            android:src="@drawable/ic_arrow_downward_black_48dp"
            />

        <ImageView
            android:id="@+id/increment_image"
            style="@style/incrementDecrement"
            android:background="?selectableItemBackground"
            android:contentDescription="@string/increment_image_description"
            android:foreground="@color/incrementDecrementColor"
            android:src="@drawable/ic_arrow_upward_black_48dp"/>
    </LinearLayout>
</RelativeLayout>
